--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <title>Posso comer?</title>
   </head>
   <body>
+    <div class="blur"></div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
